--- a/FreelancerApiProject.Api/appsettings.json
+++ b/FreelancerApiProject.Api/appsettings.json
@@ -10,19 +10,16 @@
     "DefaultConnection": "Data Source=abdalla\\SQLEXPRESS;Database=FreelancerApiDB;Integrated Security=True;Trust Server Certificate=True"
   },
   "JWT": {
-    "Key": "ANQEyVLbqUtyO+cFhvjkNSuG+5u4UxzKcI7rjnqqmgE=",
+    "Key": "your-jwt-key",
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser"
 
-  },
-  "google": {
-    "ClientId": "1679541546-jcmb01tm980bmijbjth4e3v7hp1bto31.apps.googleusercontent.com"
-  },
+  },{
   "AppUrl": "http://localhost:5031",
   "EmailSettings": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "UserName": "abdalla.hassanin.2000@gmail.com",
-    "Password": "ulvaenbvwjtpfghv"
+    "UserName": "your-email",
+    "Password": "your-password"
   }
 }
